# zooma2sssom

./: README.md  pyproject.toml  test.ipynb
mappings/: atlas.zooma.sssom.tsv  cbi.zooma.sssom.tsv  clinvar-xrefs.zooma.sssom.tsv  cttv.zooma.sssom.tsv  ebi-biosamples.zooma.sssom.tsv  ebisc.zooma.sssom.tsv  eva-clinvar.zooma.sssom.tsv  faang.zooma.sssom.tsv  gwas.zooma.sssom.tsv  hca.zooma.sssom.tsv  metabolights.zooma.sssom.tsv  sysmicro.zooma.sssom.tsv  ukbiobank.zooma.sssom.tsv  uniprot.zooma.sssom.tsv
src/: extractor.py  sparql_endpoint.py
