[tool.poetry]
name = "zooma2sssom"
version = "0.1.0"
description = ""
authors = ["Anita Caron <anitacaron@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sssom = "^0.3.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
